force-app/main/default/objects/REVA_Course_Type__c/REVA_Course_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>REVA Course Type contains all the Engineering and CS Courses</description>
    <label>REVA Course Type</label>
</CustomObject>