force-app/main/default/objects/REVA_Course_Type__c/fields/CS__c.field-meta.xml
<CustomField>
    <fullName>CS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox if the course type is CS</description>
    <inlineHelpText>Select the checkbox if the course type is CS</inlineHelpText>
    <label>CS</label>
    <type>Checkbox</type>
</CustomField>