force-app/main/default/objects/REVA_Course_Type__c/fields/Engineering__c.field-meta.xml
<CustomField>
    <fullName>Engineering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to verify the course is of Engineering or Non-Engineering</description>
    <inlineHelpText>Select Engineering if the course type is Engineering</inlineHelpText>
    <label>Engineering</label>
    <type>Checkbox</type>
</CustomField>