force-app/main/default/objects/REVA_Course_Type__c/fields/PG__c.field-meta.xml
<CustomField>
    <fullName>PG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post Graduation Course</description>
    <inlineHelpText>Utilize this to determine whether the course falls under the Post Graduate classification.</inlineHelpText>
    <label>PG</label>
    <type>Checkbox</type>
</CustomField>