force-app/main/default/objects/REVA_Course_Type__c/fields/PUC__c.field-meta.xml
<CustomField>
    <fullName>PUC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to determine whether the course is pre university course</description>
    <label>Pre University Course</label>
    <type>Checkbox</type>
</CustomField>